--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -57,15 +58,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.squareup.okhttp:okhttp:1.3.0'
-    compile 'com.squareup.retrofit:retrofit:1.3.0'
     compile 'de.greenrobot:eventbus:2.2.1'
-    compile 'org.parceler:parceler:0.2.9'
-    compile 'com.scottyab:aescrypt:0.0.1'
-
-    compile 'org.jsoup:jsoup:1.7.3'
-
     compile('com.twitter.sdk.android:twitter:1.9.1@aar') {
         transitive = true;
     }
